k8s/front_end/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-user-management-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: react.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: react-user-management-svc
              port:
                number: 80
